gcc/testsuite/rust/rustc/ui/parser/issues/issue-13483.rs
fn main() {
    if true {
    } else if {
// { dg-error "" "" { target *-*-* } .-1 }
    } else {
    }
}

fn foo() {
    if true {
    } else if {
// { dg-error "" "" { target *-*-* } .-1 }
    }
    bar();
}

fn bar() {}

